index.html file changes

--- a/webbuild/index.html
+++ b/webbuild/index.html
@@ -1,5 +1,5 @@
 <html>
-    <head>
+<head>
     <meta charset="UTF-8" />
     <style>
         body {
@@ -32,73 +32,23 @@
         100% { transform: rotate(360deg); }
     }
     </style>
-    </head>
-    <body>
-    <div class="loader"></div>
-    <script>
-        // the following function keeps track of all AudioContexts and resumes them on the first user
-        // interaction with the page. If the function is called and all contexts are already running,
-        // it will remove itself from all event listeners.
-        (function () {
-            // An array of all contexts to resume on the page
-            const audioContextList = [];
-
-            // An array of various user interaction events we should listen for
-            const userInputEventNames = [
-                "click",
-                "contextmenu",
-                "auxclick",
-                "dblclick",
-                "mousedown",
-                "mouseup",
-                "pointerup",
-                "touchend",
-                "keydown",
-                "keyup",
-            ];
-
-            // A proxy object to intercept AudioContexts and
-            // add them to the array for tracking and resuming later
-            self.AudioContext = new Proxy(self.AudioContext, {
-                construct(target, args) {
-                    const result = new target(...args);
-                    audioContextList.push(result);
-                    return result;
-                },
-            });
-
-            // To resume all AudioContexts being tracked
-            function resumeAllContexts(_event) {
-                let count = 0;
-
-                audioContextList.forEach((context) => {
-                    if (context.state !== "running") {
-                        context.resume();
-                    } else {
-                        count++;
-                    }
-                });
-
-                // If all the AudioContexts have now resumed then we unbind all
-                // the event listeners from the page to prevent unnecessary resume attempts
-                // Checking count > 0 ensures that the user interaction happens AFTER the game started up
-                if (count > 0 && count === audioContextList.length) {
-                    userInputEventNames.forEach((eventName) => {
-                        document.removeEventListener(eventName, resumeAllContexts);
-                    });
-                }
-            }
-
-            // We bind the resume function for each user interaction
-            // event on the page
-            userInputEventNames.forEach((eventName) => {
-                document.addEventListener(eventName, resumeAllContexts);
-            });
-        })();
-    </script>
+</head>
+<body>
+    <canvas id="canvas" width="800" height="600"></canvas>
     <script type="module">
-        import init from '/out/bevy_3d_rendering.js'
-        init();
+        import init, { Renderer } from './pkg/wasm_rendering_engine.js';
+
+        async function run() {
+            await init();
+            const renderer = new Renderer('canvas');
+            function renderLoop() {
+                renderer.render();
+                requestAnimationFrame(renderLoop);
+            }
+            renderLoop();
+        }
+
+        run();
     </script>
 </body>
 </html>
