Your commit message

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         })();
     </script>
     <script type="module">
-        import init from '/out/bevy_3d_rendering.js'
+        import init from './out/bevy_3d_rendering.js'
         init();
     </script>
 </body>
