--- a/index.html
+++ b/index.html
@@ -98,7 +98,38 @@
     </script>
     <script type="module">
         import init from './out/bevy_3d_rendering.js'
-        init();
+        async function start() {
+            try {
+                console.log("Initializing Bevy...");
+                await init();
+                console.log("Bevy initialized successfully");
+
+                const glbUrl = './assets/ANGEL-FRANK1.glb';
+                console.log(`Attempting to load model from ${glbUrl}`);
+                
+                // Simulate loading model
+                const response = await fetch(glbUrl);
+                if (!response.ok) {
+                    throw new Error(`Failed to fetch model: ${response.statusText}`);
+                }
+                
+                const modelData = await response.arrayBuffer();
+                console.log("Model data loaded successfully", modelData);
+
+                // Add code to pass modelData to Bevy or handle it as needed
+            } catch (e) {
+                console.error("Initialization or model loading failed:", e);
+            }
+
+            const canvas = document.querySelector('canvas');
+            if (canvas) {
+                console.log("Canvas element found:", canvas);
+            } else {
+                console.error("Canvas element not found");
+            }
+        }
+
+        start();
     </script>
 </body>
 </html>
