--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         })();
     </script>
     <script type="module">
-        
+
         import init from './out/bevy_3d_rendering.js'
 
         async function runBevy() {
@@ -115,7 +115,7 @@
             }
 
             // Il codice per caricare il modello GLB può rimanere qui
-            const glbUrl = 'assets/ANGEL-FRANK1.glb';
+            const glbUrl = 'https://albyleo.github.io/Bevy_3d_rendering/assets/ANGEL-FRANK1.glb';
             console.log(`Attempting to load model from ${glbUrl}`);
             try {
                 const response = await fetch(glbUrl);
