--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </script>
     <script type="module">
 
-        import init from './out/bevy_3d_rendering.js'
+        import init from './out/bevy_3d_rendering.js?v=1'
 
         async function runBevy() {
             await init();
