--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             }
 
             // Il codice per caricare il modello GLB può rimanere qui
-            const glbUrl = 'assets/ANGEL-FRANK1_converted.glb';
+            const glbUrl = 'assets/Angel1.glb';
             console.log(`Attempting to load model from ${glbUrl}`);
             try {
                 const response = await fetch(glbUrl);
